# proof-of-self

./: .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_VISION.md  README.md  REFACTORING_PLAN.md  ROADMAP.md  pyproject.toml  requirements.txt  start-server.sh  test_index.py
config/: config.example.yaml
data/: proof-of-monk.db
docs/: README.md  setup.md
docs/archive/: AUDIT_COMPLETE.md  AUDIT_REPORT.md  DEPRECATED.md  architecture.md  inbox-guide.md  quickstart.md  roadmap.md  status.md
src/proof_of_monk/: __init__.py  cli.py  server.py
src/proof_of_monk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/proof_of_monk/adapters/: __init__.py  base.py  file.py  twitter.py
src/proof_of_monk/core/: __init__.py  database.py  inbox_scanner.py  indexer.py  migrate.py  search.py
src/proof_of_monk/tools/: __init__.py  document_tools.py  thought_tools.py  tweet_tools.py
src/proof_of_self/: __init__.py  cli.py  server.py
src/proof_of_self.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/proof_of_self/adapters/: __init__.py  base.py  file.py  twitter.py
src/proof_of_self/core/: __init__.py  chunker.py  database.py  inbox_scanner.py  indexer.py  migrate.py  search.py
src/proof_of_self/tools/: __init__.py  document_tools.py  thought_tools.py  tweet_tools.py
tests/: test_mcp_connection.py  test_mcp_server.py  test_twitter_integration.py
